<resources>
    <string name="app_name">E-commerce app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginButtonText">Login</string>
    <string name="signupButtonText">Sign Up</string>
    <string name="signupFragmentUsernameLabel">User Name</string>
    <string name="signupFragmentEmailLabel">Phone Number</string>
    <string name="signupFragmentPasswordLabel">Password</string>
    <string name="signupFragmentConfirmPasswordLabel">Confirm Password</string>
    <string name="signupDescription">Create an new account</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="_3">3</string>
    <string name="herschelSupplyCo">Herschel Supply Co.</string>
    <string name="availableInStock">Available in stock</string>
    <string name="reviews">(270 Review)</string>
    <string name="daypackBackpack">Daypack Backpack</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="description">Description</string>
    <string name="a_roomy_backpack">A roomy backpack from the specialists in everyday bags at Herschel Supply Co., featuring resilient canvas and a light-blue patina that feels just right for summer.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_orders">My Orders</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="street">Street:</string>
    <string name="app_logo">App Logo</string>
    <string name="back_button_image">Back Button Image</string>
    <string name="cart_image">Cart Image</string>
    <string name="city">City:</string>
    <string name="sacramento">Sacramento</string>
    <string name="state_province_area">State/province/area:</string>
    <string name="california">California</string>
    <string name="phone_number">Phone number:</string>
    <string name="zip_code">Zip code:</string>
    <string name="country_calling_code">Country calling code:</string>
    <string name="_95814">95814</string>
    <string name="country">Country:</string>
    <string name="united_states">United States</string>
    <string name="product_item">Product Item</string>
    <string name="promo_code">Promo Code</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="rika2021">#rika2021</string>
    <string name="promo_code_image">Promo Code Image</string>
    <string name="total_price">Total Price</string>
    <string name="place_order">place Order</string>
    <string name="_3512_pearl_street">3512 pearl street</string>
    <string name="_916_299_4041">916–299–4041</string>
    <string name="country_code">+1</string>
    <string name="tracking_icon">Tracking Icon</string>
    <string name="_6556_23341_8090">6556 23341 8090</string>
    <string name="ena_express">Ena Express</string>
    <string name="transit">Transit</string>
    <string name="current_order_state_icon">Current Order State Icon</string>
    <string name="finished_state_icon">Finished State Icon</string>
    <string name="not_finished_state">Not Finished State</string>
    <string name="_25_june_2021">25 June, 2021</string>
    <string name="_30_june_2021">30 June, 2021</string>
    <string name="new_york">New York</string>
    <string name="tracking">Tracking</string>
    <string name="user_image">User Image</string>
    <string name="edit_your_image_button">Edit Your Image Button</string>
    <string name="upload_image">Upload image</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="hasan_mahmud">Hasan Mahmud</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="change_language_icon">Change Language Icon</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="_22_years">22 Years</string>
    <string name="email">Email</string>
    <string name="enter_your_e_mail">Enter your phone number</string>
    <string name="rikafashionshop_gmail_com">rikafashionshop@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="dark_mode_icon">Dark Mode Icon</string>
    <string name="notifications_icon">Notifications Icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_center">Help Center</string>
    <string name="help_center_icon">Help Center Icon</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="log_out">Log Out</string>
    <string name="cart_item_image">Cart Item Image</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_item_description">cart Item Description</string>
    <string name="cart_item_price">cart Item Price</string>
    <string name="button">Button</string>
    <string name="category_item_background">Category Item Background</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="_208_products">208 Products</string>
    <string name="apply">Apply</string>
    <string name="number_of_items">number of items</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="proceed_to_checkout_button_image">Proceed To Checkout Button Image</string>
    <string name="side_menu_button">Side Menu Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="welcome">Welcome,</string>
    <string name="our_rika_fashion_app">Our Rika Fashion App</string>
    <string name="last_order_image">Last Order Image</string>
    <string name="axel_arigato">Axel Arigato</string>
    <string name="clean_90_triple_sneakers">Clean 90 Triple Sneakers</string>
    <string name="track_the_last_order_button">Track the last order button</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="top_dresses">Top Dresses</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome2">Welcome!</string>
    <string name="please_login_to_continue_our_app">please login to continue our app</string>
    <string name="options_button">Options Button</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="_20_discount_new_arrival_product">20% Discount\nNew Arrival Product</string>
    <string name="publish_up_your_selfies">Publish up your selfies to make yourself\nmore beautiful with this app.</string>
    <string name="all_types_offers_nwithin_your_reach">All Types Offers\nWithin Your Reach</string>
    <string name="take_advantage_of_the_offer_shopping">Take Advantage Of The Offer Shopping</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="enter_your_user_name">Enter Your User name</string>
    <string name="re_write_your_password">Re-write Your Password</string>
    <string name="signup_check_button"><![CDATA[By creating an account you have to agree with our them & condition.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="successful_image">successful Image</string>
    <string name="you_have_successfully_registered">You have successfully registered in our app and start working in it.</string>
    <string name="successful">Successful!</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="product_image">Product Image</string>
    <string name="put_in_favourites_button">Put in favourites button</string>
    <string name="textview">TextView</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="order_image">Order Image</string>
    <string name="roller_rabbit">Roller Rabbit</string>
    <string name="vado_odelle_dress">Vado Odelle Dress</string>
    <string name="quality">Quality:</string>
    <string name="xxl">XXL</string>
    <string name="color">Color:</string>
    <string name="_10">10</string>
    <string name="personal_details">Personal Details</string>
    <string name="prompt_icon">Prompt Icon</string>
    <string name="you_have_successfully_your_shopping_cart_list">You have successfully your\nshopping cart list!</string>
    <string name="track_order">Track Order</string>
    <string name="item_name">item Name</string>
    <string name="item_description">item Description</string>
    <string name="item_price">item Price</string>
    <string name="order_status_icon">order status icon</string>
    <string name="us_2343445668">US 2343445668</string>
    <string name="washington_georgia">Washington - Georgia</string>
    <string name="delivered">Delivered</string>
</resources>