<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_view_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/orderImage"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/order_image" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:fontFamily="@font/montsemibold"
            android:text="@string/roller_rabbit"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toTopOf="@+id/model"
            app:layout_constraintStart_toEndOf="@+id/orderImage"
            app:layout_constraintTop_toTopOf="@+id/orderImage" />

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:fontFamily="@font/montreglaur"
            android:text="@string/vado_odelle_dress"
            android:textSize="@dimen/_11sp"
            android:textColor="@color/_666"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/orderImage"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:fontFamily="@font/montreglaur"
            android:text="@string/quality"
            android:textColor="@color/_666"
            android:textSize="@dimen/_9sp"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/orderImage"
            app:layout_constraintTop_toBottomOf="@+id/model" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:fontFamily="@font/montreglaur"
            android:text="@string/size"
            android:textSize="@dimen/_9sp"
            android:textColor="@color/_666"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/orderImage"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/color"
            android:textSize="@dimen/_9sp"
            android:textColor="@color/_666"
            app:layout_constraintBottom_toBottomOf="@+id/orderImage"
            app:layout_constraintStart_toEndOf="@+id/orderImage"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/_10"
            android:textColor="@color/_666"
            android:textSize="@dimen/_9sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/xxl"
            android:textColor="@color/_666"
            android:textSize="@dimen/_9sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="@dimen/_14sp"
            android:fontFamily="@font/montbold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>