<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/_50_white_rect"
    android:padding="@dimen/_50dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/successful_icon"
        android:contentDescription="@string/prompt_icon" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montbold"
        android:textAlignment="center"
        android:textSize="@dimen/_24sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_17dp"
        android:text="@string/successful" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_17dp"
        android:fontFamily="@font/montreglaur"
        android:textSize="@dimen/_14sp"
        android:lineHeight="@dimen/_23dp"
        android:textColor="@color/_AAA"
        android:text="@string/you_have_successfully_your_shopping_cart_list" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trackOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montbold"
        android:textSize="@dimen/_16sp"
        android:background="@drawable/_50_black_rect"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:paddingStart="@dimen/_40dp"
        android:paddingEnd="@dimen/_40dp"
        android:layout_marginTop="@dimen/_35dp"
        android:text="@string/track_order" />
</LinearLayout>