<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />


        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:backgroundTint="@color/_666"
            android:drawableTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/montreglaur"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textPersonName"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLabel"
            android:paddingStart="-12dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/black"
                android:ems="10"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/montreglaur"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48dp"
            android:background="@drawable/signup_btn"
            android:fontFamily="@font/montbold"
            android:text="@string/loginButtonText"
            android:textSize="@dimen/_16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/input_layout3" />

        <TextView
            android:id="@+id/emailInputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montsemibold"
            android:text="@string/signupFragmentEmailLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <TextView
            android:id="@+id/passwordInputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montsemibold"
            android:text="@string/signupFragmentPasswordLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logoblack"
            app:layout_constraintBottom_toTopOf="@+id/guideline26"
            app:layout_constraintEnd_toStartOf="@+id/guideline22"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="@+id/guideline25"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/app_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.29" />

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/montsemibold"
            android:text="@string/welcome2"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <TextView
            android:id="@+id/signupDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/please_login_to_continue_our_app"
            android:textSize="@dimen/_14sp"
            android:fontFamily="@font/montreglaur"
            android:textColor="@color/_666"
            app:layout_constraintStart_toStartOf="@+id/guideline27"
            app:layout_constraintTop_toBottomOf="@+id/signupTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>