<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homeapp.notificationspage.NotificationsPage">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:background="@drawable/circle_btn"
            android:padding="@dimen/_20dp"
            android:scaleType="center"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toTopOf="@+id/guideline41"
            android:contentDescription="@string/back_button_image" />


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            app:cardCornerRadius="@dimen/_500dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline43"
            app:layout_constraintTop_toTopOf="@+id/guideline41">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/cartNotification"
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/white"

                    android:scaleType="centerInside"
                    android:src="@drawable/options_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/options_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/montbold"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline43"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toBottomOf="@+id/textView11">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>